src/objects/Core_Approver_Details__c.object
<CustomObject>
    <customHelpPage>Core_CA_IPHelp</customHelpPage>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>ACTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PREP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REWO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QUER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Header__c</fullName>
        <label>Request Id</label>
        <referenceTo>Core_Approval_Header__c</referenceTo>
        <relationshipLabel>Approval Status</relationshipLabel>
        <relationshipName>Core_Approver_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approver_Chatter_Preference__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Approver Chatter Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ariba_Role__c</fullName>
        <label>Ariba Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Action__c</fullName>
        <formula>IF(ISPICKVAL( Action__c, &quot;ACTV&quot;), &quot;Active&quot;, 
IF(ISPICKVAL( Action__c, &quot;APPR&quot;), &quot;Approved&quot;, 
IF(ISPICKVAL( Action__c, &quot;CANC&quot;), &quot;Cancelled&quot;, 
IF(ISPICKVAL( Action__c, &quot;COPY&quot;), &quot;Copy&quot;, 
IF(ISPICKVAL( Action__c, &quot;DRFT&quot;), &quot;Draft&quot;, 
IF(ISPICKVAL( Action__c, &quot;PREP&quot;), &quot;Prepared For&quot;, 
IF(((ISPICKVAL(Source_System__c , &quot;Invoice&quot;))&amp;&amp;(ISPICKVAL( Action__c, &quot;REJC&quot;))),&quot;Return to AP&quot;, 
IF(ISPICKVAL( Action__c, &quot;REJC&quot;), &quot;Returned&quot;, 
IF(ISPICKVAL( Action__c, &quot;SUBM&quot;), &quot;Submitted&quot;, 
IF(ISPICKVAL( Action__c, &quot;REWO&quot;), &quot;Rework&quot;, 
IF(ISPICKVAL( Action__c, &quot;QUER&quot;), &quot;Query with Vendor&quot;, 
IF(ISPICKVAL( Action__c, &quot;PAPP&quot;), &quot;Partial Approver&quot;, 
NULL))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Role__c</fullName>
        <formula>IF(ISPICKVAL( Role__c, &quot;EMP&quot;), &quot;Employee&quot;,
IF(ISPICKVAL( Role__c, &quot;APP&quot;), &quot;Approver&quot;,
IF(ISPICKVAL( Role__c, &quot;PRP&quot;), &quot;Preparer&quot;,
IF(ISPICKVAL( Role__c, &quot;REV&quot;), &quot;Reviewer&quot;,
IF(ISPICKVAL( Role__c, &quot;DAT&quot;), &quot;Data Entry&quot;,
IF(ISPICKVAL( Role__c, &quot;PRE&quot;), &quot;Prepayment Auditor&quot;,
IF(ISPICKVAL( Role__c, &quot;PST&quot;), &quot;Post Auditor&quot;,
IF(ISPICKVAL( Role__c, &quot;SUB&quot;), &quot;Submit For&quot;,
IF(ISPICKVAL( Role__c, &quot;SFO&quot;), &quot;Submit For their own form&quot;,
IF(ISPICKVAL( Role__c, &quot;SYS&quot;), &quot;System Approver&quot;,
IF(ISPICKVAL( Role__c, &quot;END&quot;), &quot;Endorser&quot;, 
IF(ISPICKVAL( Role__c, &quot;OTH&quot;), &quot;Others&quot;, 
NULL))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentDateTime__c</fullName>
        <description>To Send the current date time in Outbound call for Ariba</description>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employee_No__c</fullName>
        <label>Employee No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_ExternalId__c</fullName>
        <formula>Approval_Header__r.External_System_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header ExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Party_Details__c</fullName>
        <label>Name</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_Party_Email__c</fullName>
        <formula>Interested_Party__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested Party Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interested Party</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Core_Approver_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the approver is currently active in the business flow of Ariba.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Received_on__c</fullName>
        <label>Received on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>EMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_to_Source_System__c</fullName>
        <label>Send to Source System</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <picklist>
            <picklistValues>
                <fullName>Ariba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query With Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to AP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TF_CreatedDate__c</fullName>
        <formula>IF( ISPICKVAL( Source_System__c , &quot;Invoice&quot;) , Action_Date__c , CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF_CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TF_Header_Status__c</fullName>
        <formula>TEXT(Approval_Header__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF_Header_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Requested_By__c</fullName>
        <formula>Approval_Header__r.Requested_By__c</formula>
        <label>TF_Requested_By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Requestor_Name__c</fullName>
        <formula>IF( ISPICKVAL( Source_System__c , &apos;Ariba&apos;) , Approval_Header__r.Requested_For_Details__c , Approval_Header__r.Requested_By_Details__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF_Requestor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Language__c</fullName>
        <label>User Language</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visible_to_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible to Supplier</label>
        <type>Checkbox</type>
    </fields>
    <label>Approval Status</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Status</pluralLabel>
    <recordTypes>
        <fullName>Ariba</fullName>
        <active>true</active>
        <label>Ariba</label>
    </recordTypes>
    <recordTypes>
        <fullName>Clarity</fullName>
        <active>true</active>
        <label>Clarity</label>
    </recordTypes>
    <recordTypes>
        <fullName>GTES</fullName>
        <active>true</active>
        <label>GTES</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice</fullName>
        <active>true</active>
        <label>Invoice</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>